--- a/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
@@ -43,7 +43,7 @@
                 </section>
             }
         </section>
-        <section class="khung-chuc-nang-lct" style="top: 10px; right: 10px;">
+        <section class="khung-chuc-nang-lct ben-trai" style="top: 10px; right: 10px;">
             <ul data-doi-tuong="cnbt-@Model.ma">
                 <li>
                     <a data-chuc-nang="sua-bai-viet">Sửa bài viết</a>
