--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -47,22 +47,22 @@
                 </section>
             }
         </section>
-        <section class="khung-chuc-nang-lct" style="top: 10px; right: 10px;">
+        <section class="khung-chuc-nang-lct ben-trai" style="top: 10px; right: 10px;">
             <ul data-doi-tuong="cndd-@Model.ma">
                 <li>
                     <a data-chuc-nang="ghim-bai-viet">Ghim bài viết</a>
-                </li>  
+                </li>
                 @if (coQuyenSua)
                 {
                     <li>
                         <a data-chuc-nang="sua-bai-viet">Sửa bài viết</a>
-                    </li>   
+                    </li>
                 }
                 @if (coQuyenXoa)
                 {
                     <li>
                         <a data-chuc-nang="xoa-bai-viet">Xóa bài viết</a>
-                    </li>   
+                    </li>
                 }
             </ul>
             <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cndd-@Model.ma">
