--- a/LCTMoodle/Views/BangDiem/_Item.cshtml
+++ b/LCTMoodle/Views/BangDiem/_Item.cshtml
@@ -13,7 +13,7 @@
     </section>
     <section class="td" style="position: relative">
         @(Model.ngay.HasValue ? Model.ngay.Value.ToString("d/M/yyyy") : null)
-        <section class="khung-chuc-nang-lct trai" style="top: 1px; right: 1px;">
+        <section class="khung-chuc-nang-lct ben-trai" style="top: 1px; right: 1px;">
             <ul data-doi-tuong="cncd-@Model.ma">
                 <li>
                     <a data-chuc-nang="xoa">Xóa cột điểm</a>
