--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -16,28 +16,6 @@
         </ul>
     </section>
     <section class="khung-form">
-        <form data-doi-tuong="binh-luan-form" class="lct-form" data-an-rang-buoc>
-            <input name="LoaiDoiTuong" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
-            <input name="MaDoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />
-            <ul style="flex-wrap: nowrap; padding: 0; margin: 0;">
-                <li style="margin: 0; width: 100%;">
-                    <article class="noi-dung">
-                        <article class="input">
-                            <textarea data-validate="bat-buoc" style="height: 20px;" name="NoiDung" placeholder="Viết bình luận của bạn" />
-                        </article>
-                    </article>
-                </li>
-                <li style="margin: 0; min-width: 34px; max-width: 34px;">
-                    <article class="noi-dung">
-                        <article class="input" style="border-left: 0;">
-                            <input type="file" name="MaTapTin" />
-                        </article>
-                    </article>
-                </li>
-                <li style="min-width: 55px; max-width: 55px; margin: 0; margin-left: 4px;">
-                    <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan">Đăng</button>
-                </li>
-            </ul>
-        </form>
+        @Html.Partial("~/Views/BinhLuan/_Form.cshtml", null, ViewData)
     </section>
 </section>
