--- a/LCTMoodle/Views/BangDiem/Xem.cshtml
+++ b/LCTMoodle/Views/BangDiem/Xem.cshtml
@@ -30,7 +30,7 @@
     </section>
     <section class="noi-dung" style="display: inline-block; max-width: 100%;">
         <article style="border: 0; background-color: transparent;">
-            <section class="khung-diem">
+            <section id="khung" class="khung-diem">
                 <table class="lct-bang" style="width: auto;">
                     <thead id="khung_tieu_de">
                         <tr>
