--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -41,7 +41,7 @@
                     }                    
                     <div class="diem-so">
                         <i class="arrow-up"></i>
-                        <span class="so">5</span>
+                        <span class="so">@Model.diem</span>
                         <i class="arrow-down"></i>
                     </div>
                     <div class="thoi-gian">@Model.thoiDiemTao</div>
