--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -41,7 +41,7 @@
                     <a class="pe-7s-tools"></a>
                 </li>
                 <li>
-                    <a data-chuc-nang="tao" class="pe-7s-plus">
+                    <a data-chuc-nang="tao" title="Thêm chủ đề con" class="pe-7s-plus">
                         <u></u>
                     </a>
                 </li>
