--- a/LCTMoodle/Views/ChuDe/_Cay_Con_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Cay_Con_Item.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DTOLayer.ChuDeDTO
 
 <li data-doi-tuong="muc" data-loai="cay-con-nut" data-ma="@Model.ma">
-    <a data-chuc-nang="mo-nut">
+    <a data-chuc-nang="mo-nut" data-doi-tuong="ten">
         @Model.ten
     </a>
 </li>
