--- a/LCTMoodle/Views/ChuDe/_Cay_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Cay_Item.cshtml
@@ -6,7 +6,7 @@
 *@
 
 <li data-doi-tuong="muc" data-loai="cay-nut" data-ma="@ViewData["Ma"]">
-    <a data-chuc-nang="mo-nut">
+    <a data-chuc-nang="mo-nut" data-doi-tuong="ten">
         @ViewData["Ten"]
     </a>
     <ul data-doi-tuong="danh-sach-muc" class="nut-con">
