--- a/LCTMoodle/Views/ChuDe/_DanhSach_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/_DanhSach_Item.cshtml
@@ -14,6 +14,12 @@
     <section class="khung-chuc-nang-lct" style="top: 2px; right: 2px;">
         <ul data-doi-tuong="cncd-@Model.ma">
             <li>
+                <a data-chuc-nang="chuyen">Chuyển vị trí</a>
+            </li>
+            <li>
+                <a data-chuc-nang="sua">Sửa thông tin</a>
+            </li>
+            <li>
                 <a data-chuc-nang="xoa">Xóa chủ đề</a>
             </li>
         </ul>
