--- a/LCTMoodle/Views/Quyen/_Item_Nhom.cshtml
+++ b/LCTMoodle/Views/Quyen/_Item_Nhom.cshtml
@@ -2,7 +2,7 @@
 
 <li class="item" data-doi-tuong="item-nhom" data-ma="@Model.ma">
     <a data-chuc-nang="chon-nhom">@Model.ten</a>
-    <section class="khung-chuc-nang-lct" style="right: 3px; top: 3px;">
+    <section class="khung-chuc-nang-lct ben-trai" style="right: 3px; top: 3px;">
         <ul data-doi-tuong="cnn-@Model.ma">
             <li>
                 <a data-chuc-nang="xoa-nhom">Xóa nhóm</a>
