--- a/LCTMoodle/Views/HoiDap/Index.cshtml
+++ b/LCTMoodle/Views/HoiDap/Index.cshtml
@@ -50,7 +50,7 @@
 <article class="hop">
     <section class="tieu-de">Danh sách câu hỏi</section>
     <section class="noi-dung" id="danh_sach">
-        @Html.Partial("_DanhSachCauHoi", Model)
+        @Html.Partial("~/Views/HoiDap/_DanhSachCauHoi.cshtml", Model)
     </section>
 </article>
 
