--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -1,9 +1,15 @@
-﻿@model DTOLayer.TraLoiDTO           
+﻿@model DTOLayer.TraLoiDTO
+
+@{
+    int trangThaiVoteTraLoi = (int)ViewData["TrangThaiVoteTraLoi"];
+}
+
 @if (Model != null)
 {
-    <li class="hop hop-1-vien tra-loi @(Model.duyet == true ? "duyet" : "binh-thuong")" data-doi-tuong="tra-loi" data-ma="@Model.ma">
+    <li class="hop hop-1-vien tra-loi @(Model.duyet == true ? "duyet" : "binh-thuong")" data-doi-tuong="tra-loi" data-ma="@Model.ma" data-trang-thai-vote="@trangThaiVoteTraLoi">
         <section class="noi-dung">
-            <article class="muc-hoi-dap" data-doi-tuong="muc-tra-loi">
+            <article class="muc-hoi-dap" data-trang-thai-vote="@trangThaiVoteTraLoi" data-doi-tuong="muc-tra-loi">
+
                 <section class="khung-chuc-nang-lct">
                     <ul data-doi-tuong="traloi-@Model.ma">
                         <li>
@@ -20,6 +26,7 @@
                         <i class="pe-7f-config"></i>
                     </button>
                 </section>
+
                 <section class="thong-tin">
                     @if (Model.nguoiTao != null)
                     {
@@ -38,19 +45,21 @@
                                 <span>@Model.nguoiTao.tenTaiKhoan</span>
                             </div>
                         </a>
-                    }                    
+                    }
                     <div class="diem-so">
                         <i class="arrow-up"></i>
                         <span class="so">@Model.diem</span>
                         <i class="arrow-down"></i>
                     </div>
-                    <div class="thoi-gian">@Model.thoiDiemTao</div>
+                    <div class="thoi-gian">@Model.thoiDiemCapNhat</div>
                 </section>
+
                 <section class="chi-tiet">
                     <div class="noi-dung noi-dung-ckeditor">
                         @Html.Raw(Model.noiDung)
                     </div>
                 </section>
+
             </article>
         </section>
     </li>
