--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -6,7 +6,7 @@
 
 @if (Model != null)
 {
-    <li class="hop hop-1-vien tra-loi @(Model.duyet == true ? "duyet" : "binh-thuong")" data-doi-tuong="tra-loi" data-ma="@Model.ma" data-trang-thai-vote="@trangThaiVoteTraLoi">
+    <li class="hop hop-1-vien tra-loi @(Model.duyet == true ? "duyet" : "binh-thuong")" data-doi-tuong="tra-loi" data-ma="@Model.ma">
         <section class="noi-dung">
             <article class="muc-hoi-dap" data-trang-thai-vote="@trangThaiVoteTraLoi" data-doi-tuong="muc-tra-loi">
 
